--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@plasmicapp/cli": "^0.1.216",
+    "@plasmicapp/cli": "^0.0.4",
     "@plasmicapp/host": "^1.0.107",
     "@plasmicapp/loader-nextjs": "^1.0.233",
     "@plasmicapp/react-web": "^0.2.161",
@@ -21,6 +21,7 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11",
     "typescript": "4.9.5"
   }
 }
